# aed3-tsp

./: CMakeLists.txt  README.md
docs/: relatorio.tex
include/: ArquivoManager.hpp  BruteForce.hpp  DFS.hpp  Prim.hpp
src/: ArquivoManager.cpp  BruteForce.cpp  DFS.cpp  Prim.cpp  main.cpp
